# opencv_cmake_demo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
